# multi-agent-systems-robotdreams

./: .gitignore  pyproject.toml
course-project-market-analyst/: PRESENTATION_NOTES.md  README.md  SUBMISSION_NOTES.md  api.py  bootstrap_langfuse.py  config.py  critic_registry.py  graph.py  langfuse_prompts.json  main.py  mcp_adapter.py  observability.py  prompt_registry.py  requirements.txt  retriever.py  schemas.py  tool_impl.py  tools.py
course-project-market-analyst/data/: public_agentic_dev_tools_notes.md
course-project-market-analyst/frontend/: index.html  package-lock.json  package.json  vite.config.ts
course-project-market-analyst/mcp_servers/: search_mcp.py
course-project-market-analyst/reviewer_artifacts/: e2e_acceptance_trace_summary.md  generated_acceptance_report.md  sample_market_analysis_report.md  static_check_summary.md
course-project-market-analyst/screenshots/: README.md
homework-lesson-10/: README.md  SUBMISSION_NOTES.md  config.py  main.py  requirements.txt  tools.py
homework-lesson-12/: README.md  SUBMISSION_NOTES.md  bootstrap_langfuse.py  config.py  langfuse_prompts.json  main.py  observability.py  prompt_registry.py  requirements.txt  schemas.py  supervisor.py
homework-lesson-3/: README.md  agent.py  config.py  main.py  requirements.txt  tools.py
homework-lesson-4/: .env.example  .gitignore  README.md  agent.py  config.py  main.py  requirements.txt  tools.py
homework-lesson-5/: README.md  SUBMISSION_NOTES.md  agent.py  config.py  ingest.py  main.py  retriever.py  tools.py
homework-lesson-8/: README.md  SUBMISSION_NOTES.md  config.py  ingest.py  main.py  requirements.txt  supervisor.py
homework-lesson-9/: README.md  SUBMISSION_NOTES.md  acp_server.py  config.py  main.py  mcp_utils.py  requirements.txt  shared_tools.py  supervisor.py
(+65 files in other folders)
