[project]
name = "robot-dreams-multi-agent-systems"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=7.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "trafilatura>=2.0.0",
]
