[project]
name = "robot-dreams-multi-agent-systems"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=7.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.6",
    "llama-index-core>=0.14.20",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.4",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "trafilatura>=2.0.0",
]
