[project]
name = "robot-dreams-multi-agent-systems"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "acp-sdk==1.0.3",
    "ddgs>=7.0",
    "deepeval==3.9.5",
    "fastmcp==3.2.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.6",
    "langfuse>=4.5.0,<5.0.0",
    "llama-index-core>=0.14.20",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.4",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.10.1",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "trafilatura>=2.0.0",
    "uvicorn==0.35.0",
]
